configuring testcontainers (wip)